website/versioned_docs/version-1.4.0/contributing/1 - Maintaining the Repository.mdx
---
title: Maintaining the Repository
id: maintaining-the-repository
globalReference: contributing-maintaining-repo
description: >
  Learn how the GoKubeDownscaler repository is maintained, how to manage releases and
  changelogs, and how to contribute as a maintainer to this open-source project.
keywords: [repository, contributing]
---

import { GithubLabel } from "/src/components/GithubLabel.tsx";

# Maintaining the Repository

This section covers how to do some maintainer tasks on the repository.

For documentation on the workflows see [this documentation page](ref:contributing-github-workflows).

## Releasing a New Version

The process to releasing a new version is almost completely automated.
There are multiple workflows that handle the release process.
All you need to do is to bump the [semver](https://semver.org) of either
the Helm chart version(`.version`) or the app version(`.appVersion`)
within the [Chart.yaml](repo:deployments/chart/Chart.yaml)(`./deployments/chart/Chart.yaml`).
Once merged into main the [workflows](ref:contributing-github-workflows) will automatically start releasing the new version.
For major and minor releases, the release workflow also creates a dedicated branch named `release/<Major>.<Minor>`.
To cherry-pick a change from `main` into one of those release branches, add a label like `backport-to-release/1.4`
to the pull request before merging.

:::info

To merge a pull request which would result in a new version once merged into main
there is an additional approval step to stop you from accidentally merging it without realizing.

To allow the pull request to make a new release after being merged you need to add the <GithubLabel label="new release"/> label to it.
This will in turn retrigger [the workflow](ref:contributing-github-workflows#check-for-release) run
which then automatically removes the <GithubLabel label="needs approval"/> label and allows the pull request to be merged.

:::
